--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -678,8 +678,8 @@
                     <body>
                         <div class="container form-group" style="text-align:center; max-width: 810px;">
                             <br/>
-                            <h1 t-if="not with_links">Welcome to Your LatinChain Club</h1>
-                            <h1 t-elif="with_links">Welcome to Your LatinChain Shopping Club <button class="btn btn-info button-share" style="border-radius: 50%; filter: contrast(100%) !important;"><div style=""><i class="fa fa-share-alt"></i></div></button></h1>
+                            <h1 t-if="not with_links">Welcome to Your LatinChain Fans Club</h1>
+                            <h1 t-elif="with_links">Welcome to Your LatinChain and César OpenSource Fans Shopping Club <button class="btn btn-info button-share" style="border-radius: 50%; filter: contrast(100%) !important;"><div style=""><i class="fa fa-share-alt"></i></div></button></h1>
                             
                             <div t-if="with_links">
                                 <br/>
