--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -472,23 +472,23 @@
                         <meta charset="UTF-8"/>
                         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-                        <title>LatinChain Club</title>
+                        <title>LatinChain and César OpenSource Fans Shopping Club</title>
 
                         <link rel="icon" type="img/png" href="/website_pinetwork_games_odoo/static/src/img/club/icon-latinchain-browser.png?v=1.104"/>
 
-                        <meta name="description" content="Discover the LatinChain Club: Your centralized portal for online collectibles clothing in the OpenSource store, and educational books, products and courses in the Club. Shipping worldwide."/>
+                        <meta name="description" content="Discover the LatinChain and César OpenSource Fans Shopping Club: Your centralized portal for online collectibles clothing in the OpenSource store, and educational books, products and courses in the Club. Shipping worldwide."/>
                         <meta name="author" content="LatinChain"/>
 
                         <meta property="og:type" content="website"/>
                         <meta property="og:url" content="https://club.latin-chain.com"/>
-                        <meta property="og:title" content="LatinChain Club"/>
-                        <meta property="og:description" content="Explore the LatinChain Club. Collectibles clothes, and find educational books, products and courses, all in one place. Shipping worldwide."/>
+                        <meta property="og:title" content="LatinChain and César OpenSource Fans Shopping Club"/>
+                        <meta property="og:description" content="Explore the LatinChain and César OpenSource Fans Shopping Club. Collectibles clothes, and find educational books, products and courses, all in one place. Shipping worldwide."/>
                         <meta property="og:image" content="/website_pinetwork_games_odoo/static/src/img/club/og-social-share.png?v=1.104"/>
-                        <meta property="og:site_name" content="LatinChain Club"/>
+                        <meta property="og:site_name" content="LatinChain and César OpenSource Fans Shopping Club"/>
 
                         <meta name="twitter:card" content="summary_large_image"/>
-                        <meta name="twitter:title" content="LatinChain Club"/>
-                        <meta name="twitter:description" content="Explore the LatinChain Club: OpenSource fashion store, and educational books, products and courses. Shipping worldwide."/>
+                        <meta name="twitter:title" content="LatinChain and César OpenSource Fans Shopping Club"/>
+                        <meta name="twitter:description" content="Explore the LatinChain and César OpenSource Fans Shopping Club: OpenSource fashion store, and educational books, products and courses. Shipping worldwide."/>
                         <meta name="twitter:image" content="/website_pinetwork_games_odoo/static/src/img/club/og-social-share.png?v=1.104"/>
                         
                         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
