--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -689,7 +689,8 @@
                             </div>
                             
                             <h5 t-if="with_links">
-                                (As Amazon associates we earn from qualifying purchases)
+                                (As Amazon associates we earn from qualifying purchases)<br/>
+                                Go down for more
                             </h5>
                             
                             <br/>
