--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -947,7 +947,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.786"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.787"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -1389,6 +1389,15 @@
                         <br/><span id="loading_word" style="display: none;">Loading...<br/></span>
                         
                         <div id="loading_word_under" style="margin-top:10px; width: 100%; display: none;"></div>
+                        
+                        <div style="margin-bottom:5px; padding:10px; width: 100%; text-align: center" class="border-gradient-rounded">
+                            <div style="margin-bottom:5px" class="border-bottom">
+                                <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#ShoppingFansClub</div></strong></h5>
+                            </div>
+                            <div style="margin-bottom:5px">
+                                <button class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success fans-shopping-club" ><div><i class="fa-solid fa-store"></i></div><div>Watch our LatinChain and César OpenSource Fans Shopping Club</div></button>
+                            </div>
+                        </div>
                         
                         <div style="margin-bottom:5px; padding:10px; width: 100%; text-align: center" class="border-gradient-rounded">
                             <div style="margin-bottom:5px" class="border-bottom">
