--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -547,7 +547,12 @@
                             }else */
                             if(window.location.search != queryString)
                             {
-                                window.location.href="https://club.latin-chain.com/"+window.location.pathname+queryString;
+                                if(window.location.host == "https://club.latin-chain.com")
+                                    window.location.href="https://club.latin-chain.com"+window.location.pathname+queryString;
+                                else if(window.location.host == "https://localhost:8014")
+                                    window.location.href="https://localhost:8014"+window.location.pathname+queryString;
+                                else if(window.location.host == "https://localhost")
+                                    window.location.href="https://localhost"+window.location.pathname+queryString;
                             }
                         </script>
                         
@@ -678,6 +683,17 @@
 
                     <body>
                         <div class="container form-group" style="text-align:center; max-width: 810px;">
+                            <nav t-if="with_links" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+                              <div class="container-fluid" style="text-align:center; max-width: 810px;">
+                                <a class="navbar-brand" href="#spring-clothing" onclick="$('#show-all').click()"><i class="fa-solid fa-globe"></i></a>
+                                <a class="navbar-brand" href="#spring-clothing" onclick="$('#show-spring-clothing').click()"><i class="fa-solid fa-shirt"></i></a>
+                                <a class="navbar-brand" href="#amazon-best-deals" onclick="$('#show-amazon-best-deals').click()"><i class="fa-brands fa-amazon"></i></a>
+                                <a class="navbar-brand" href="#udemy-courses" onclick="$('#show-udemy-courses').click()"><i class="fa-solid fa-graduation-cap"></i></a>
+                                <a class="navbar-brand" href="#amazon-books" onclick="$('#show-amazon-books').click()"><i class="fa-solid fa-book-open"></i></a>
+                                <!-- Toggler button and menu items here -->
+                              </div>
+                            </nav>
+                            
                             <br/>
                             <h1 t-if="not with_links">Welcome to Your LatinChain Fans Club</h1>
                             <h1 t-elif="with_links">Welcome to Your LatinChain and César OpenSource Fans Shopping Club <button class="btn btn-info button-share" style="border-radius: 50%; filter: contrast(100%) !important;"><div style=""><i class="fa fa-share-alt"></i></div></button></h1>
@@ -746,7 +762,7 @@
                                   <input type="text" class="search-collectibles form-control" placeholder="Search Shopping Items" aria-label="Search collectibles" aria-describedby="inputGroup-sizing-lg" />
                                 </div>
                             </div>
-                            <div t-if="with_links" class="spring-clothing">
+                            <div t-if="with_links" class="spring-clothing" id="spring-clothing">
                                 <br/>
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
                                     <h3>Clothing and Collectibles in César OpenSource Store with Spring</h3>
@@ -755,7 +771,7 @@
                                     <iframe style="border-radius:24px;border:none" src="https://embed.creator-spring.com/widget?slug=my-store-10dea32&amp;per=30&amp;currency=&amp;page=1&amp;layout=carousel-wide&amp;theme=light" title="César OpenSource Store Merch store powered by Spring" width="100%" height="420" data-reactroot=""></iframe>
                                 </h5>
                             </div>
-                            <div t-if="with_links" class="amazon-best-deals">
+                            <div t-if="with_links" class="amazon-best-deals" id="amazon-best-deals">
                                 <br/>
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
                                     <h3>Today's Best Products on Amazon</h3>
@@ -886,7 +902,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="udemy-courses">
+                            <div class="udemy-courses" id="udemy-courses">
                                 <br/>
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
                                     <h3>Udemy courses</h3>
@@ -898,7 +914,7 @@
                                 <h5 style="padding:10px;" class="border-gradient-rounded product"><img src="https://img-c.udemycdn.com/course/200_H/6522069_77ba.jpg" width="180px" height="110px" /><br/><strong>Aprende Inglés práctico hoy mismo (con IA)</strong><br/> (<div style="display:inline;">Languages</div>) (<div style="display:inline;">English</div> <div style="display:inline;">and</div> <div style="display:inline;">Spanish</div>)<div style="">Udemy Course Author: César Cordero</div> <t t-if="with_links"><a href="/english-course/" target="_blank">Udemy course</a></t></h5>
                                 <h5 style="padding:10px;" class="border-gradient-rounded product"><img src="https://img-c.udemycdn.com/course/200_H/6595211_0834_3.jpg" width="180px" height="110px" /><br/><strong>Cómo crear tu marca personal by Cesar - OpenSource Expert</strong><br/> (<div style="display:inline;">Business improvement</div>) (<div style="display:inline;">Spanish</div>)<div style="">Udemy Course Author: César Cordero</div> <t t-if="with_links"><a href="/brand-course/" target="_blank">Udemy course</a></t></h5>
                             </div>
-                            <div class="amazon-books">
+                            <div class="amazon-books" id="amazon-books">
                                 <br/>
                                 <div style="margin-bottom:5px; padding:5px" class="border border-top-0">
                                     <h3>Amazon books</h3>
