--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1392,10 +1392,17 @@
                         
                         <div style="margin-bottom:5px; padding:10px; width: 100%; text-align: center" class="border-gradient-rounded">
                             <div style="margin-bottom:5px" class="border-bottom">
-                                <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#FansShoppingClub</div></strong></h5>
+                                <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#FansClub</div></strong></h5>
                             </div>
                             <div style="margin-bottom:5px">
-                                <button class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success fans-shopping-club" ><div><i class="fa-solid fa-store"></i></div><div>Watch our LatinChain and César OpenSource Fans Shopping Club</div></button>
+                                <div><strong>Watch our LatinChain and César OpenSource Fans Shopping Club</strong></div>
+                                <div>
+                                    <button class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success fans-shopping-club" ><div><i class="fa-solid fa-store"></i></div><div>Fans Shopping Club</div></button>
+                                </div>
+                                <div><strong>Watch our Crypto News</strong></div>
+                                <div>
+                                    <button class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success cryptonews" ><div><i class="fa fa-newspaper-o"></i></div><div>Crypto News</div></button>
+                                </div>
                             </div>
                         </div>
                         
