--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -747,9 +747,11 @@
                             <h1 t-if="not with_links">Welcome to Your LatinChain Fans Club</h1>
                             <h1 t-elif="with_links"><div style="display:inline;">Welcome to Your LatinChain and César OpenSource Fans Shopping Club</div> <div style="display:inline;"><button class="btn btn-info button-share" style="border-radius: 50%; filter: contrast(100%) !important;"><div style=""><i class="fa fa-share-alt"></i></div></button></div></h1>
                             
+                            <t t-set="link_tag_code" t-value="amazon_aff_code"/>
+                            
                             <div t-if="with_links">
                                 <br/>
-                                <a href="https://amzn.to/3MuNfil" target="_blank">
+                                <a href="https://www.amazon.com/?&amp;linkCode=sl2&amp;tag=' + link_tag_code + '&amp;linkId=f84d100dc0684303b0c16c600d90f848&amp;language=en_US&amp;ref_=as_li_ss_tl" target="_blank">
                                     <img src="/website_pinetwork_games_odoo/static/src/img/club/amazon-purchase-image.png?v=1.104" width="250px" height="250px" />
                                 </a>
                             </div>
@@ -834,9 +836,6 @@
                                     </div>
                                     <div class="row" style="margin-top: 10px">
                                         <h3 class="col-12">
-                                            
-                                            <t t-set="link_tag_code" t-value="amazon_aff_code"/>
-                                            
                                             <div class="product">
                                                 <hr/>
                                                 <a href="https://www.amazon.com/dp/B0D73FQTHQ?ref=t_ac_view_request_product_image&amp;campaignId=amzn1.campaign.68MPXAEHFGC0&amp;linkCode=tr1&amp;tag=' + link_tag_code + '&amp;linkId=amzn1.campaign.68MPXAEHFGC0_1771337661156" target="_blank" class="btn btn-link amazon-list"><strong>DOOGEE S200 5G Rugged Phone (all-terrain, ultra-resistant) on Amazon</strong></a>
