--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -947,7 +947,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.801"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.802"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -1397,7 +1397,7 @@
                             <div style="margin-bottom:5px">
                                 <div><strong>Watch our LatinChain and César OpenSource Fans Shopping Club</strong></div>
                                 <div>
-                                    <button class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success fans-shopping-club" ><div><i class="fa-solid fa-store"></i></div><div>Fans Shopping Club</div></button>
+                                    <a href="https://club.latin-chain.com" target="_blank" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success fans-shopping-club" ><div><i class="fa-solid fa-store"></i></div><div>Fans Shopping Club</div></a>
                                 </div>
                                 <div><strong>Watch our Crypto News</strong></div>
                                 <div>
