--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1232,8 +1232,8 @@
                         </section>
                     </div>
                     
-                    <div class="alert alert-primary" role="alert">
-                        <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-link" style="font-size: 120%; text-align: center" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Hello Pioneers, we need your help, <strong>we need at least 300 pioneers subscribed monthly</strong> to keep paying our servers. Click here to subscribe and fund our operations: LINK.</a>
+                    <div class="alert alert-primary" role="alert" style="text-align: center">
+                        <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-link" style="font-size: 120%;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Hello Pioneers, we need your help, <strong>we need at least 300 pioneers subscribed monthly</strong> to keep paying our servers. Click here to subscribe and fund our operations: LINK.</a>
                     </div>
                     
                     <div translate="no" class="justify-content-left text-left p-3 mb-2" style="color: #ffffff !important; background-color: #1f2434 !important">
