--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1232,7 +1232,7 @@
                         </section>
                     </div>
                     
-                    <div class="alert alert-primary" role="alert" style="text-align: center; margin-bottom: 0px !important">
+                    <div class="alert alert-primary getverified" role="alert" style="text-align: center; margin-bottom: 0px !important">
                         <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-link" style="font-size: 120%; color: black !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Hello Pioneers, we need your help, <strong>we need at least 400 pioneers subscribed monthly</strong> to keep paying our servers. Click here to subscribe and fund our operations: LINK.</a>
                     </div>
                     
