--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1242,7 +1242,7 @@
                     </t>
                     <t t-else="">
                         <div class="alert alert-primary" role="alert" style="text-align: center; margin-bottom: 0px !important">
-                            <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-link" style="font-size: 120%; color: black !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Hello Pioneers, we need your help, <strong>we need at least 400 pioneers verified monthly on Mainnet</strong> to keep paying our servers. Click here to get verified and fund our operations. (This announcement will dissapear once you get verified)</a>
+                            <a href="https://latinchain.pinet.com/pinetwork" class="btn btn-link" style="font-size: 120%; color: black !important;" t-att-target="'_self' if mainnet in ['Mainnet ON', 'Mainnet OFF'] else '_blank'">Hello Pioneers, we need your help, <strong>we need at least 400 pioneers verified monthly on Mainnet</strong> to keep paying our servers. Click here to get verified and fund our operations.</a>
                         </div>
                     </t>
                     
