--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -307,6 +307,7 @@
                                     <img class="rounded" width="80" height="80" src="https://radioforus.com/wp-content/uploads/2023/02/Radioforus.png" style="display: block; margin-left: auto; margin-right: auto; background-color: white"/>
                                     
                                     <h1 align="center" style="font-weight:600">Donate Pi cryptocurrency here</h1>
+                                    <h3 align="center" style="font-weight:600">Get verified</h3>
                                     
                                     <t t-set="amount_end" t-value="round(amount*3, 7)"/>
                                     
