--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -853,7 +853,8 @@
                                             </div>
                                             <div class="product">
                                                 <hr/>
-                                                <a href="https://www.amazon.com/stores/AmazonBasics/page/947C6949-CF8E-4BD3-914A-B411DD3E4433?&amp;linkCode=ll2&amp;tag=' + link_tag_code + '&amp;linkId=e23a9553d9d287363864232038921dc5&amp;language=en_US&amp;ref_=as_li_ss_tl" target="_blank" class="btn btn-link amazon-list"><strong>DOOGEE S200 5G Rugged Phone (all-terrain, ultra-resistant) on Amazon</strong></a>
+                                                <t t-set="link_value" t-value="'https://www.amazon.com/stores/AmazonBasics/page/947C6949-CF8E-4BD3-914A-B411DD3E4433?&amp;linkCode=ll2&amp;tag=' + link_tag_code + '&amp;linkId=e23a9553d9d287363864232038921dc5&amp;language=en_US&amp;ref_=as_li_ss_tl'"/>
+                                                <a href="link_value" target="_blank" class="btn btn-link amazon-list"><strong>Amazon Basics on Amazon</strong></a>
                                             </div>
                                             <div class="product">
                                                 <hr/>
